--- a/app/views/admin/reservations/_actions.html.haml
+++ b/app/views/admin/reservations/_actions.html.haml
@@ -1,2 +1,4 @@
-= link_to 'Valider la Réservation', accept_reservations_admin_path(resa), method: :put, class: 'btn btn-primary'
-= link_to 'Marquer la réservation comme payée', payed_reservations_admin_path(resa), method: :put, class: 'btn btn-danger'
+- if resa.status == 'pending'
+  = link_to 'Valider la Réservation', accept_reservations_admin_path(resa), method: :put, class: 'btn btn-primary'
+- elsif resa.status == 'accepted'
+  = link_to 'Marquer la réservation comme payée', payed_reservations_admin_path(resa), method: :put, class: 'btn btn-danger'
