change user to profile in association with item_user

--- a/app/views/admin/reservations/_item_user_fields.html.haml
+++ b/app/views/admin/reservations/_item_user_fields.html.haml
@@ -3,7 +3,7 @@
     = link_to_remove_association icon("fa fa-close"), f, class: "btn btn-default btn-sm"
 
     .row
-      .col-xs-4.col-sm-6= f.select :user_id, User.all
+      .col-xs-4.col-sm-6= f.select :profile_id, Profile.all
       .col-xs-4.col-sm-6= f.select :pricing_id, Pricing.all
     .row
       .col-xs-4.col-sm-6= f.date_field :start
