--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     %title= Rails.application.class.parent_name
     = csrf_meta_tags
     = action_cable_meta_tag
-    / = stylesheet_pack_tag 'application', media: 'all'
+    = stylesheet_link_tag 'application', media: 'all'
   %body
     = component 'flash'
     = yield
