--- a/app/views/admin/reservations/_actions.html.haml
+++ b/app/views/admin/reservations/_actions.html.haml
@@ -2,3 +2,4 @@
   = link_to 'Valider la Réservation', accept_reservations_admin_path(resa), method: :put, class: 'btn btn-primary'
 - elsif resa.status == 'accepted'
   = link_to 'Marquer la réservation comme payée', payed_reservations_admin_path(resa), method: :put, class: 'btn btn-danger'
+  = link_to 'Imprimer', charges_reservations_admin_path(resa, format: 'pdf'), target: '_blank', class: 'btn btn-success'
