--- a/app/views/layouts/pdf.html.haml
+++ b/app/views/layouts/pdf.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:charset => "UTF-8"}/
-    = wicked_pdf_stylesheet_link_tag "application"
+    = wicked_pdf_stylesheet_link_tag "pdf"
   %body
     .container
       = yield
